@@ -2562,3 +2562,4 @@
 ( cvs diff -u -r 1.61.2.61 -r 1.61.2.62 src/account.c;  cvs diff -u -r 1.105.2.93 -r 1.105.2.94 src/prefs_account.c;  cvs diff -u -r 1.49.2.26 -r 1.49.2.27 src/prefs_account.h;  ) > 2.9.1cvs32.patchset
 ( cvs diff -u -r 1.61.2.62 -r 1.61.2.63 src/account.c;  cvs diff -u -r 1.56.2.51 -r 1.56.2.52 src/pop.c;  cvs diff -u -r 1.105.2.94 -r 1.105.2.95 src/prefs_account.c;  cvs diff -u -r 1.49.2.27 -r 1.49.2.28 src/prefs_account.h;  ) > 2.9.1cvs33.patchset
 ( cvs diff -u -r 1.274.2.187 -r 1.274.2.188 src/mainwindow.c;  cvs diff -u -r 1.654.2.2617 -r 1.654.2.2618 configure.ac;  ) > 2.9.1cvs34.patchset
+( cvs diff -u -r 1.1.2.16 -r 1.1.2.17 manual/glossary.xml;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 manual/plugins.xml;  ) > 2.9.1cvs35.patchset
