@@ -1,3 +1,9 @@
+2007-04-30 [paul]	2.9.1cvs35
+
+	* manual/glossary.xml
+	* manual/plugins.xml
+		updates. Patch by Ricardo
+
 2007-04-29 [wwp]	2.9.1cvs34
 
 	* src/mainwindow.c
